--- a/src/app/view/dashboard/comptable-dash-board/comptable-dash-board.component.html
+++ b/src/app/view/dashboard/comptable-dash-board/comptable-dash-board.component.html
@@ -1,34 +1,85 @@
 <div class="d-flex" id="wrapper">
-
     <!-- Sidebar -->
     <div class="bg-dark border-right" id="sidebar-wrapper">
-      <div class="sidebar-heading"><img src="https://www.supmaroc.com/wp-content/uploads/FST-marrakech.jpg" alt="" height="90px" width="200px"></div>
-      <hr style="color: white;">
-      <div class="list-group list-group-flush">
-        <a style="color: white;" [routerLink]="['/login']"
-          class="list-group-item list-group-item-action bg-dark"><i class="fa fa-user" aria-hidden="true"></i>Profile</a>
-        <a style="color: white;" [routerLink]="[{ outlets: {dashboard:['eb-list-comptable'] } }]"
-        class="list-group-item list-group-item-action bg-dark"><i class="fa fa-list" aria-hidden="true"></i> List Des
-        Expression</a>
-        <a style="color: white;" [routerLink]="[{ outlets: {dashboard:['demmande-list-create'] } }]"
-        class="list-group-item list-group-item-action bg-dark"><i class="fa fa-list" aria-hidden="true"></i>Ajouter
-      une demmande</a>
-      </div>
+        <div class="sidebar-heading"><img src="https://www.supmaroc.com/wp-content/uploads/FST-marrakech.jpg" alt="" height="90px" width="200px"></div>
+        <hr style="color: white;">
+        <div class="list-group list-group-flush">
+
+            <!--Expression-->
+            <div class="dropdown">
+                <a style="color: white;" class="list-group-item list-group-item-action bg-dark dropdown-toggle" data-toggle="dropdown">
+                    <i class="fa fa-question" aria-hidden="true"></i>Expression
+
+                </a>
+                <div class="collapse  dropdown-menu" style="background-color: black;">
+                    <a style="color: white; background-color: black;" [routerLink]="['ebs']" class="list-group-item list-group-item-action"><i class="fa fa-list" aria-hidden="true"></i>
+                        List Des Expression</a>
+                </div>
+            </div>
+
+            <!--Achat-->
+            <div class="dropdown">
+                <a style="color: white;" class="list-group-item list-group-item-action bg-dark dropdown-toggle" data-toggle="dropdown"><i class="fa fa-shopping-bag" aria-hidden="true"></i>
+                    Achat
+                </a>
+                <div class="collapse  dropdown-menu" style="background-color: black;">
+                    <a style="color: white; background-color: black;" [routerLink]="['achat']" class="list-group-item list-group-item-action">
+                        <i class="fa fa-plus" aria-hidden="true"></i>Ajouter Une Demande</a>
+
+
+                    <a style="color: white; background-color: black;" [routerLink]="['achats']" class="list-group-item list-group-item-action">
+                        <i class="fa fa-list" aria-hidden="true"></i>List Des Achat</a>
+                </div>
+            </div>
+
+            <!--Fournisseur-->
+            <div class="dropdown">
+                <a style="color: white;" class="list-group-item list-group-item-action bg-dark dropdown-toggle" data-toggle="dropdown"><i class="fa fa-handshake-o" aria-hidden="true"></i>
+                    Fournisseur
+                </a>
+                <div class="collapse  dropdown-menu" style="background-color: black;">
+                    <a style="color: white; background-color: black;" [routerLink]="['fournisseur']" class=" list-group-item list-group-item-action">
+                        <i class="fa fa-handshake-o" aria-hidden="true"></i> Ajouter un Fournisseur</a>
+
+                    <a style="color: white; background-color: black;" [routerLink]="['fournisseurs']" class="list-group-item list-group-item-action">
+                        <i class="fa fa-list" aria-hidden="true"></i> List Des Fournisseur</a>
+                </div>
+            </div>
+
+            <!--Produits-->
+            <div class="dropdown">
+                <a style="color: white;" class="list-group-item list-group-item-action bg-dark dropdown-toggle" data-toggle="dropdown"><i class="fa fa-product-hunt" aria-hidden="true"></i>
+                    Produits
+                </a>
+                <div class="collapse  dropdown-menu" style="background-color: black;">
+                    <a style="color: white;" style="color: white; background-color: black;" [routerLink]="['produit']" class=" list-group-item list-group-item-action">
+                        <i class="fa fa-plus-square" aria-hidden="true"></i> Ajouter un Produit</a>
+
+
+
+                    <a style="color: white; background-color: black;" [routerLink]="['produits']" class="list-group-item list-group-item-action bg-dar">
+                        <i class="fa fa-list" aria-hidden="true"></i>List Des Produit</a>
+                </div>
+            </div>
+        </div>
     </div>
     <!-- /#sidebar-wrapper -->
-  
+
     <!-- Page Content -->
     <div id="page-content-wrapper">
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark border-bottom mb-3">
-        <button class="btn btn-primary  mr-2" id="menu-toggle"><i class="fa fa-bars" aria-hidden="true"></i></button>
-        <span>  <h2 style="color: white;">Comptable, Welcom {{username}}</h2></span>
-       
-      </nav>
-      <div class="container-fluid">
-        <router-outlet name="dashboard"></router-outlet>
-      </div>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark border-bottom mb-3 sticky-top">
+            <button class="btn btn-primary  mr-2" id="menu-toggle"><i class="fa fa-bars"
+                    aria-hidden="true"></i></button>
+            <span>
+                <h2 style="color: white;">Comptable, Welcom {{username}}</h2>
+            </span>
+
+        </nav>
+        <div class="container-fluid">
+            <router-outlet></router-outlet>
+        </div>
     </div>
     <!-- /#page-content-wrapper -->
-  
-  </div>
-  <!-- /#wrapper -->
+
+</div>
+<!-- /#wrapper -->
