--- a/src/app/view/eb/eb-list/eb-list-chef/eb-list-chef.component.html
+++ b/src/app/view/eb/eb-list/eb-list-chef/eb-list-chef.component.html
@@ -1,43 +1,61 @@
-<div class="card shadow mt-3 mb-3">
+<h2>List De Tout Les Expression Des Besoin</h2>
+<div class="card text-white bg-dark shadow mt-3 mb-3">
     <div class="card-header">
         <div class="container">
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <div class="form-group">
-                        <label for="dept">Departement</label>
-                        <select class="form-control" id="dept" [(ngModel)]=libelle (change)="getEbByEntite()">
+                        <label for="date">Filter By Date</label>
+                        <input id="date" type="date" class="form-control" (change)="onFilterAction()" [(ngModel)]=date>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <label for="personnel">Filter By Personnel</label>
+                        <select class="form-control" id="personnel" [(ngModel)]=personnel (change)="onFilterAction()">
+                            <option selected></option>
+                            <option *ngFor="let personnel of personnelList" value="{{personnel.name}}">
+                                {{personnel.name}}
+                            </option>
+                        </select>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <label for="dept">Filter By Dept</label>
+                        <select class="form-control" id="dept" [(ngModel)]=dept (change)="onFilterAction()">
+                            <option selected></option>
                             <option *ngFor="let dept of deptList" value="{{dept.libelle}}">
                                 {{dept.libelle}}
                             </option>
                         </select>
                     </div>
                 </div>
-                <div class="col-md-4">
+
+
+                <div class="col-md-3">
                     <div class="form-group">
-                        <label for="personnel">Personnel</label>
-                        <select class="form-control" id="personnel" [(ngModel)]="cin" (change)="getEbByPersonnel()">
-                            <option *ngFor="let personnel of personnelList" value="{{personnel.cin}}">
-                                {{personnel.name}}
-                            </option>
+                        <label for="sort">Sort By <i class="fa fa-sort mr-1" (click)="onSortAction()" aria-hidden="true"></i></label>
+
+                        <select class="form-control" id="sort" [(ngModel)]=sortBy (change)="onSortAction()">
+                            <option selected></option>
+                            <option value="1">Titre</option>
+                            <option value="0">Date</option>
                         </select>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="form-group">
-                        <label for="date">Date De Creation</label>
-                        <input id="date" type="date" class="form-control" (change)="getEbBySaveDate()" [(ngModel)]=date>
                     </div>
                 </div>
             </div>
         </div>
     </div>
     <div class="card-body table-responsive">
-        <table class="table table-dark">
+        <div class="form-group">
+            <input placeholder="search by eb title..." id="key" type="text" class="form-control" [(ngModel)]=title (keyup)="onFilterAction()">
+        </div>
+        <table class="table table-light table-hover table-bordered">
             <thead>
                 <tr>
-                    <th id="eb-title" (click)="onSortByTitleClick()">Title <i class="fa fa-sort" aria-hidden="true"></i></th>
-                    <th id="eb-date" (click)="onSortByCreatedDate()">Created  <i class="fa fa-sort" aria-hidden="true"></i></th>
-                    <th id="eb-statu">Statut</th>
+                    <th>Titre</th>
+                    <th>Created At</th>
                     <th>Personnel</th>
                     <th>Departement</th>
                     <th>Action</th>
@@ -49,28 +67,31 @@
                         No data to display.
                     </td>
                 </tr>
-                <tr *ngFor="let eb of ebList">
+                <tr *ngFor="let eb of ebListFiltered">
                     <td>{{eb.title}}</td>
                     <td>{{eb.saveDate}}</td>
-                    <td>
-                        <app-statut [statut]="eb.statut"></app-statut>
-                    </td>
                     <td>{{eb.personnel.name}}</td>
                     <td>{{eb.dept.libelle}}</td>
                     <td>
                         <button class="btn btn-danger fa fa-trash mr-2" (click)="onEbDelete(eb)"></button>
-                        <button data-toggle="modal" data-target="#myModal" class="btn btn-primary fa fa-eye mr-2"
-                            (click)="onEbShow(eb)"></button>
-
+                        <button data-toggle="modal" data-target="#myModal" class="btn btn-primary fa fa-eye mr-2" (click)="onEbShow(eb)"></button>
                     </td>
                 </tr>
             </tbody>
         </table>
+        <ul class="pagination justify-content-center" style="margin:20px 0">
+            <li class="page-item"><a (click)="setPage(page-1,$event)" class="page-link"><i style="color: rgb(37, 37, 37);" class="fa fa-arrow-left " aria-hidden="true"></i></a></li>
+            <li class="page-item" *ngFor="let p of pages; let i=index" [ngClass]="{'active':i==page}">
+                <a (click)="setPage(i,$event)" class="page-link" href="">{{i}}</a>
+            </li>
+            <li class="page-item"><a (click)="setPage(page+1,$event)" class="page-link"><i style="color: rgb(37, 37, 37);" class="fa fa-arrow-right " aria-hidden="true"></i></a></li>
+
+        </ul>
     </div>
 
 </div>
-<div class="modal fade bd-example-modal-lg" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-    aria-hidden="true">
+
+<div class="modal fade bd-example-modal-lg" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
@@ -80,10 +101,10 @@
                 </button>
             </div>
             <div class="modal-body">
-                <table class="table table-bordered table-hover">
+                <table class="table table-light table-bordered table-hover">
                     <thead>
                         <tr>
-                            <th >Produit </th>
+                            <th>Produit</th>
                             <th>Desc</th>
                             <th>Statut</th>
                             <th>Q-Demander</th>
@@ -101,15 +122,16 @@
                             <td>{{ebp.produit.libelle}}</td>
                             <td>{{ebp.product_desc}}</td>
                             <td>{{ebp.besoin_statut}}</td>
-                            <td><input [min]=1 type="number" [(ngModel)]=ebp.qteDemande class="form-control col-xs-2"></td>
-                            <td ><input min="1" [max]="ebp.qteDemande" [disabled]="ebp.besoin_statut!=statuts[0]" type="number" [(ngModel)]=ebp.qteAccorde class="form-control"></td>
+                            <td><input [min]=1 type="number" [(ngModel)]=ebp.qteDemande class="form-control col-xs-2">
+                            </td>
+                            <td><input min="1" [max]="ebp.qteDemande" [disabled]="ebp.besoin_statut!=statuts[0]" type="number" [(ngModel)]=ebp.qteAccorde class="form-control"></td>
                             <td>
                                 <div>
-                                    <input #a type="radio"   [name]="ebp.id" [value]="statuts[0]" id="accorder" [(ngModel)]=ebp.besoin_statut>
+                                    <input #a type="radio" [name]="ebp.id" [value]="statuts[0]" id="accorder" [(ngModel)]=ebp.besoin_statut>
                                     <label for="accorder">{{statuts[0]}}</label>
                                 </div>
                                 <div>
-                                    <input #r type="radio"  [name]="ebp.id" [value]="statuts[1]" id="refuser" [(ngModel)]=ebp.besoin_statut>
+                                    <input #r type="radio" [name]="ebp.id" [value]="statuts[1]" id="refuser" [(ngModel)]=ebp.besoin_statut>
                                     <label for="refuser">{{statuts[1]}}</label>
                                 </div>
                             </td>
