--- a/src/app/view/eb/eb-list/eb-list-stuf/eb-list-stuf.component.html
+++ b/src/app/view/eb/eb-list/eb-list-stuf/eb-list-stuf.component.html
@@ -1,3 +1,121 @@
-<div class="card shadow mt-3 mb-3">
-    <app-eb-list-current></app-eb-list-current>
+<h2>List De Tout Les Expression Des Besoin</h2>
+
+<div class="card text-white bg-dark shadow mt-3 mb-3">
+    <div class="card-header">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <label for="date">Filter By Date</label>
+                        <input id="date" type="date" class="form-control" (change)="onFilterAction()" [(ngModel)]=date>
+                    </div>
+                </div>
+
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <label for="dept">Filter By Dept</label>
+                        <select class="form-control" id="dept" [(ngModel)]=dept (change)="onFilterAction()">
+                            <option selected></option>
+                            <option *ngFor="let dept of deptList" value="{{dept.libelle}}">
+                                {{dept.libelle}}
+                            </option>
+                        </select>
+                    </div>
+                </div>
+
+
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <label for="sort">Sort By <i class="fa fa-sort mr-1" (click)="onSortAction()" aria-hidden="true"></i></label>
+
+                        <select class="form-control" id="sort" [(ngModel)]=sortBy (change)="onSortAction()">
+                            <option selected></option>
+                            <option value="1">Titre</option>
+                            <option value="0">Date</option>
+                        </select>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="card-body table-responsive">
+        <div class="form-group">
+            <input placeholder="search by eb title..." id="key" type="text" class="form-control" [(ngModel)]=title (keyup)="onFilterAction()">
+        </div>
+        <table class="table table-light table-hover table-bordered">
+            <thead>
+                <tr>
+                    <th>Titre</th>
+                    <th>Created At</th>
+                    <th>Departement</th>
+                    <th>Action</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngIf="ebList.length==0">
+                    <td class="alert alert-secondary" colspan="6" role="alert">
+                        No data to display.
+                    </td>
+                </tr>
+                <tr *ngFor="let eb of ebListFiltered">
+                    <td>{{eb.title}}</td>
+                    <td>{{eb.saveDate}}</td>
+                    <td>{{eb.dept.libelle}}</td>
+                    <td>
+                        <button class="btn btn-danger fa fa-trash mr-2" (click)="onEbDelete(eb)"></button>
+                        <button data-toggle="modal" data-target="#myModal" class="btn btn-primary fa fa-eye mr-2" (click)="onEbShow(eb)"></button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
+
+</div>
+<div class="modal text-white bg-dark de bd-example-modal-lg" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Produits</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <table class="table table-light table-bordered table-hover">
+                    <thead>
+                        <tr>
+                            <th>Produit</th>
+                            <th>Desc</th>
+                            <th>Statut</th>
+                            <th>Q-Demander</th>
+                            <th>Q-Accorder</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngIf="ebpList.length==0">
+                            <td class="alert alert-secondary" colspan="5" role="alert">
+                                No data to display.
+                            </td>
+                        </tr>
+                        <tr *ngFor="let ebp of ebpList">
+                            <td>{{ebp.produit.libelle}}</td>
+                            <td>{{ebp.product_desc}}</td>
+                            <td>{{ebp.besoin_statut}}</td>
+                            <td><input [min]=1 type="number" [(ngModel)]=ebp.qteDemande class="form-control col-xs-2">
+                            </td>
+                            <td>{{ebp.qteAccorde}}</td>
+
+                        </tr>
+                    </tbody>
+                </table>
+
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-primary" data-dismiss="modal" (click)="onEbpUpdate()">Save
+                    changes</button>
+            </div>
+        </div>
+    </div>
 </div>
